# datastorers

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
datastore_entity/: Cargo.toml
datastore_entity/src/: accesstoken.rs  connection.rs  entity.rs  lib.rs
datastore_entity_derives/: Cargo.toml
datastore_entity_derives/src/: lib.rs
datastore_entity_macro/: Cargo.toml
datastore_entity_macro/src/: lib.rs
datastore_tests/: Cargo.toml
datastore_tests/src/: main.rs
src/: bytes.rs  connection.rs  deserialize.rs  entity.rs  error.rs  identifier.rs  lib.rs  main.rs  query.rs  serialize.rs  transaction.rs  update.rs
test_output/: Cargo.toml
test_output/src/: main.rs
tests/entity/: main.rs
tests/identifier/: main.rs
tests/integration/: connection.rs  index.yaml  main.rs
