[package]
name = "datastore_entity"
version = "0.0.1"
authors = ["Andreas Pålsson <a.palsson@gmail.com>", "Erik Zivkovic <erik@zivkovic.se>"]
edition = "2018"

[dependencies]
thiserror = "1.0.22"
google-datastore1 = { git = "https://github.com/bes/google-datastore1-generated" }
datastore_entity_derives = { path = "./datastore_entity_derives" }

[dev-dependencies]
google_api_auth = { git = "https://github.com/google-apis-rs/generator" }
gcp_auth = "0.3.2"
tokio = { version = "0.2.21", features = ["full"] }
rand = "0.7.3"

[features]
# no features by default
default = []

# Enable integration testing, if not set all integration tests will be ignored
integration_tests = []